# B_to_KPiPiGamma

./: CMakeLists.txt  README.md
apps/: Event_Generator_FAST.cpp  Event_Generator_beta.cpp
include/: Coupling_Constants.hpp  Dalitz_Region.hpp  Form_Factors.hpp  Functions.hpp  Helicity_Amplitude.hpp  Kinematics.hpp  Matrix_Elements.hpp  Particle.hpp  RandomGen.hpp  ThreeBodies_Kinematics.hpp  Transform.hpp
include/Quark_Pair_Creation_Model/: Kres_to_VP.hpp  QPCM_A_to_VplusP.hpp
scripts/: Go_run_B_to_KPiPiGamma.sh  Imagine_only.sh  Omega.py  average_omega.py  combine_output.sh  lines_check.py
src/: Coupling_Constants.cpp  Dalitz_Region.cpp  Form_Factors.cpp  Functions.cpp  Helicity_Amplitude.cpp  Kinematics.cpp  Matrix_Elements.cpp  Particle.cpp  RandomGen.cpp  ThreeBodies_Kinematics.cpp  Transform.cpp
src/Quark_Pair_Creation_Model/: Kres_to_VP.cpp  QPCM_A_to_VplusP.cpp
tests/apps_test/: Event_Generator.cpp  Event_Generator_BGrun.cpp  complex_test.cpp  generator_test.cpp  parameter_test.cpp
tests/generator_test/src/: CMakeLists.txt  test.cpp
tests/making_test/: CMakeLists.txt
tests/making_test/include/: RandomGen.hpp
tests/making_test/src/: RandomGen.cpp  generator_test.cpp
